# fastapi_pet

./: .dockerignore  .env.example  .gitignore  DOCKER.md  README.md  alembic.ini  config.py  docker-compose.yml  gemini_client.py  main.py  pyproject.toml
core/: config.py  database.py  security.py
db/: __init__.py  base.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/api/: client.js
frontend/src/components/: MarkdownRenderer.js  ThemeToggle.js
frontend/src/context/: AuthContext.js  ThemeContext.js
frontend/src/pages/: Chat.js  ChatList.js  LoginForm.js  RegisterForm.js  SettingsPage.js
frontend/src/theme/: theme.js
migrations/: env.py
migrations/versions/: 20260301_000000_001_initial_schema.py  20260301_030000_002_make_user_id_nullable.py  20260301_031000_003_change_role_to_string.py  20260301_032000_004_make_user_id_not_null.py  20260301_120000_005_add_user_settings_table.py
models/: __init__.py  chat.py  message.py  session.py  user.py  user_settings.py
routers/: __init__.py  auth.py  chats.py  settings.py
schemas/: __init__.py  auth.py  chat.py  message.py  session.py  user.py  user_settings.py
services/: __init__.py  gemini_service.py
