[project]
name = "fastapi-pet"
version = "0.1.0"
description = "FastAPI Gemini Clone - Async chat API with PostgreSQL"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "black>=24.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.134.0",
    "google-genai>=1.65.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
